--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,6 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+# Python virtual environment
+.venv/
