--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           distribution: 'zulu'
-          java-version: 1.8
-          java-package: jre
+          java-version: '8'
       - name: Build Project
         run: ./gradlew build
       - name: Run Unit Tests
