--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -4,17 +4,32 @@ on:
   push:
     branches:
       - master
-    paths:
-      - 'mkdocs.yml'
-      - 'docs/**'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
+
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+
+      - name: Deploy MkDocs to GitHub Pages
+        run: mkdocs gh-deploy --force
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '8'
+
+      - name: Generate Dokka
+        run: ./gradlew dokkaHtml
+
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.8
+        with:
+          branch: gh-pages
+          folder: api
