--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -32,4 +32,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.8
         with:
           branch: gh-pages
-          folder: api
+          target-folder: api
