--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -32,4 +32,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.8
         with:
           branch: gh-pages
+          folder: build/dokka/html
           target-folder: api
