Add comment in mkdocs to test github authentication

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,3 +1,5 @@
+# This site is not a priority; work on the code before working on this site.
+
 site_name: Interface Of Our Own
 site_author: Soblem Prolved
 theme:
